--- a/CRMPhone/MainWindow.xaml
+++ b/CRMPhone/MainWindow.xaml
@@ -74,10 +74,13 @@
                     <Button  Margin="5" Width="36" Height="36" Command="{Binding HoldCommand}" ToolTip="Hold/UnHold">
                         <Image Source="pack://application:,,,/Images/hold.png" Width="24" Height="24" />
                     </Button>
-                    <Button  Margin="5" Width="36" Height="36" Command="{Binding BridgeCommand}" Visibility="Hidden" ToolTip="Соединить линии">
+                    <Button  Margin="5" Width="36" Height="36" Command="{Binding BridgeCommand}" Visibility="Collapsed" ToolTip="Соединить линии">
                         <Image Source="pack://application:,,,/Images/bridgeBlack.png" Width="32" Height="32" />
                     </Button>
-                    <Button  Margin="5" Width="36" Height="36" Command="{Binding ConferenceCommand}" Visibility="Hidden" ToolTip="Конференция">
+                    <Button  Margin="5" Width="36" Height="36" Command="{Binding NumbersCommand}" ToolTip="Номеронабиратель">
+                        <Image Source="pack://application:,,,/Images/numbers.png" Width="32" Height="32" />
+                    </Button>
+                    <Button  Margin="5" Width="36" Height="36" Command="{Binding ConferenceCommand}" Visibility="Collapsed" ToolTip="Конференция">
                         <Image Source="pack://application:,,,/Images/merge.png" Width="24" Height="24" />
                     </Button>
                     <Button  Margin="5" Width="36" Height="36" Command="{Binding QueuePauseCommand}" ToolTip="Не принимать звонки">
