--- a/CRMPhone/Controls/RequestItem.xaml
+++ b/CRMPhone/Controls/RequestItem.xaml
@@ -87,6 +87,10 @@
                     </ComboBox>
                     <CheckBox Margin="3" VerticalAlignment="Center" IsChecked="{Binding ShowAllMasters}">Все</CheckBox>
                     <TextBlock Margin="3" VerticalAlignment="Center" Text="Исполнитель:"/>
+                    <Button HorizontalAlignment="Right" Background="Transparent" BorderThickness="0" Command="{Binding ElementName=RequestGrid, Path=DataContext.ShowExecuterInfoCommand}"
+                            CommandParameter="{Binding ElementName=RequestList, Path=SelectedItem}">
+                        <Image Source="pack://application:,,,/Images/info_24.png" Height="24" />
+                    </Button>
                     <ComboBox Margin="3"  Width="125" DisplayMemberPath="FullName" SelectedItem="{Binding SelectedExecuter}" ItemsSource="{Binding ExecuterList}" IsEditable="True">
                         <ComboBox.Resources>
                             <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
