--- a/CRMPhone/Controls/RequestControl.xaml
+++ b/CRMPhone/Controls/RequestControl.xaml
@@ -289,7 +289,7 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Header="Район" Width="150"
+                <DataGridTextColumn Header="Район" Width="150"  Visibility="Collapsed"
                              Binding="{Binding Path=RegionName}">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
@@ -481,7 +481,7 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Header="Комментарий исполнителя" Width="280" Visibility="Collapsed"
+                <DataGridTextColumn Header="Комментарий исполнителя" Width="280"
                              Binding="{Binding Path=LastNote}">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
