--- a/CRMPhone/Dialogs/Admins/WorkerAddOrEditDialog.xaml
+++ b/CRMPhone/Dialogs/Admins/WorkerAddOrEditDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:admins="clr-namespace:CRMPhone.ViewModel.Admins"
         mc:Ignorable="d"
-        Title="Исполнитель" Height="490" Width="1000" MinWidth ="1000" MinHeight="490"
+        Title="Исполнитель" Height="490" Width="460" MinWidth ="460" MinHeight="490"
         WindowStartupLocation="CenterOwner"
         WindowStyle="ToolWindow"
         d:DataContext="{d:DesignInstance admins:WorkerAdminDialogViewModel}">
@@ -21,11 +21,16 @@
         </Grid.RowDefinitions>
         <DockPanel Grid.Row="0">
             <TextBlock Margin="5" VerticalAlignment="Center" Text="УК:"/>
-            <ComboBox Margin="5" HorizontalAlignment="Right" Width="185" DisplayMemberPath="Name" SelectedItem="{Binding SelectedServiceCompany}" ItemsSource="{Binding ServiceCompanyList}">
+            <DockPanel HorizontalAlignment="Right" >
+            <ComboBox Margin="5" Width="185" DisplayMemberPath="Name" SelectedItem="{Binding SelectedServiceCompany}" ItemsSource="{Binding ServiceCompanyList}">
                 <ComboBox.Resources>
                     <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
                 </ComboBox.Resources>
             </ComboBox>
+                <Button Margin="5" Width="32" Command="{Binding Path=BindCompanyCommand}">
+                    <Image  Source="pack://application:,,,/Images/settings_small.png" Stretch="UniformToFill" Height="28" />
+                </Button>
+            </DockPanel>
         </DockPanel>
         <StackPanel Grid.Row="1">
             <DockPanel>
@@ -105,7 +110,7 @@
 
             </StackPanel>
         </StackPanel>
-        <StackPanel Grid.Row="0" Grid.Column="1" Grid.RowSpan="2">
+        <StackPanel Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Visibility="Collapsed">
             <TextBlock Margin="5" VerticalAlignment="Center" Text="Фото:"/>
             <Button>
             <Image Width="540" />
