--- a/CRMPhone/Dialogs/Admins/HouseAddOrEditDialog.xaml
+++ b/CRMPhone/Dialogs/Admins/HouseAddOrEditDialog.xaml
@@ -78,8 +78,9 @@
                 <DatePicker Margin="5" HorizontalAlignment="Right" Width="120" SelectedDate="{Binding CommissioningDate}"/>
             </DockPanel>
         </StackPanel>
-        <StackPanel Grid.Row="3" HorizontalAlignment="Right">
+        <DockPanel Grid.Row="3" HorizontalAlignment="Right">
+            <Button Margin="5" Width="120" Height="24" Command="{Binding Path=RequestTypesCommand}">Услуги</Button>
             <Button Margin="5" Width="120" Height="24" Command="{Binding Path=SaveCommand}">Сохранить</Button>
-        </StackPanel>
+        </DockPanel>
     </Grid>
 </Window>
