[~] - Админка, автообзвон. Продолжить и экспорт

--- a/CRMPhone/Controls/Admins/RingUpAdminControl.xaml
+++ b/CRMPhone/Controls/Admins/RingUpAdminControl.xaml
@@ -15,13 +15,15 @@
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <DockPanel HorizontalAlignment="Center" Margin="5">
-            <Button Width="100" Margin ="15,5" Content="Новый" Command="{Binding NewCommand}"/>
-            <!--<TextBlock Margin="3" VerticalAlignment="Center" Text="Дата с:"></TextBlock>
-            <DatePicker Margin="3"/>
-            <TextBlock Margin="3" VerticalAlignment="Center" Text="по:"></TextBlock>
+            <TextBlock Margin="3" VerticalAlignment="Center" Text="Дата с:"></TextBlock>
+            <DatePicker Margin="3" SelectedDate="{Binding FromDate}"/>
+            <Button Width="100" Margin ="5,5" Content="Новый" Command="{Binding NewCommand}"/>
+            <!--<TextBlock Margin="3" VerticalAlignment="Center" Text="по:"></TextBlock>
             <DatePicker Margin="3"/>-->
-            <Button Width="100" Margin ="15,5" Content="Обновить" Command="{Binding RefreshCommand}"/>
-            <Button Width="100" Margin ="15,5" Content="Прервать" Command="{Binding AbortCommand}"/>
+            <Button Width="90" Margin ="5,5" Content="Обновить" Command="{Binding RefreshCommand}"/>
+            <Button Width="90" Margin ="5,5" Content="Прервать" Command="{Binding AbortCommand}"/>
+            <Button Width="90" Margin ="5,5" Content="Продолжить" Command="{Binding ContinueCommand}"/>
+            <Button Width="90" Margin ="5,5" Content="Экспорт" Command="{Binding ExportListsCommand}"/>
         </DockPanel>
         <DataGrid Name="RequestsGrid" Grid.Row ="1" 
                           AutoGenerateColumns="False"
