--- a/CRMPhone/Controls/RequestItem.xaml
+++ b/CRMPhone/Controls/RequestItem.xaml
@@ -43,19 +43,20 @@
                 </WrapPanel>
                     <WrapPanel Grid.Row="1" Grid.Column="0">
                     <TextBlock Margin="3" VerticalAlignment="Center" Text="Услуга:"/>
-                    <!--<ComboBox IsEnabled ="{Binding CanSave}" Margin="3" Width="125" DisplayMemberPath="Name" SelectedItem="{Binding SelectedParentService}" ItemsSource="{Binding ParentServiceList}" IsEditable="True" >
+                    <ComboBox IsEnabled ="{Binding CanSave}" Margin="3" Width="125" DisplayMemberPath="Name" SelectedItem="{Binding SelectedParentService}" ItemsSource="{Binding ParentServiceList}" IsEditable="True" >
                         <ComboBox.Resources>
                             <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
                         </ComboBox.Resources>
-                    </ComboBox>-->
-                    <controls:FilteredComboBox Margin="3" Width="125" FilterPath="Name" 
+                    </ComboBox>
+                    <!--<controls:FilteredComboBox Margin="3" Width="125" FilterPath="Name" 
+                           Text="{Binding Path=SelectedParentText}"
                            FilterText="{Binding RelativeSource={RelativeSource Self}, Path=Text, Mode=OneWay}" 
                            DisplayMemberPath="Name" SelectedItem="{Binding SelectedParentService}" StaysOpenOnEdit="True"
                            IsTextSearchEnabled="False" ItemsSource="{Binding ParentServiceList}" IsEditable="True">
                         <ComboBox.Resources>
                             <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
                         </ComboBox.Resources>
-                    </controls:FilteredComboBox>
+                    </controls:FilteredComboBox>-->
 
                     <TextBlock Margin="3" VerticalAlignment="Center" Text="/"/>
                     <controls:FilteredComboBox Margin="3" Width="240" FilterPath="Name"
