--- a/CRMPhone/Controls/Admins/WorkerAdminControl.xaml
+++ b/CRMPhone/Controls/Admins/WorkerAdminControl.xaml
@@ -5,8 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CRMPhone.Controls.Admins"
              xmlns:dto="clr-namespace:RequestServiceImpl.Dto;assembly=RequestServiceImpl"
+             xmlns:viewModel="clr-namespace:CRMPhone.ViewModel"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="300"
+             d:DataContext="{d:DesignInstance viewModel:WorkerAdminControlContext}">
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -16,10 +19,12 @@
             <Button Width="100" Margin ="5" Content="Добавить" Command="{Binding AddNewCommand}"/>
             <Button Width="100" Margin ="5" Content="Удалить" Command="{Binding DeleteCommand}"/>
             <Button Padding="5,0" Margin ="5" Content="Адреса и Услуги" Command="{Binding HouseAndServiceCommand}"/>
+            <TextBlock Margin ="5" Text="Поиск:"/>
+            <TextBox Text="{Binding WorkerSearch, UpdateSourceTrigger=PropertyChanged}" Margin ="5" Width="100"/>
         </WrapPanel>
         <DataGrid Name="ServiceCompanyGrid" Grid.Row ="1" 
                   AutoGenerateColumns="False"
-                  ItemsSource="{Binding Path=WorkersList}"
+                  ItemsSource="{Binding Path=View}"
                   SelectedItem="{Binding Path=SelectedWorker}"
                   SelectionMode="Single"
                   SelectionUnit="FullRow"
